// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract .extractPackageFile() updates internal packages 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "depName": "@org/a",
      },
      Object {
        "depName": "@org/b",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "foo",
      },
    ],
    "lernaPackages": Array [
      "packages/*",
    ],
    "managerData": Object {
      "lernaDir": ".",
    },
    "packageFile": "package.json",
    "packages": Array [
      "packages/*",
    ],
  },
  Object {
    "deps": Array [
      Object {
        "depName": "@org/b",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "bar",
      },
    ],
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": ".",
      "packageJsonName": "@org/a",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "yarnLock": undefined,
  },
  Object {
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": ".",
      "packageJsonName": "@org/b",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses lerna package settings 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "depName": "@org/a",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/b",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "foo",
      },
    ],
    "lernaPackages": Array [
      "packages/*",
    ],
    "managerData": Object {
      "lernaDir": ".",
    },
    "packageFile": "package.json",
    "packages": Array [
      "packages/*",
    ],
  },
  Object {
    "deps": Array [
      Object {
        "depName": "@org/b",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "bar",
      },
    ],
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": ".",
      "packageJsonName": "@org/a",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "yarnLock": undefined,
  },
  Object {
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": ".",
      "packageJsonName": "@org/b",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses yarn workspaces package settings with lerna 1`] = `
Array [
  Object {
    "lernaClient": "yarn",
    "lernaPackages": Array [
      "oldpackages/*",
    ],
    "managerData": Object {
      "lernaDir": ".",
      "yarnWorkspacesPackages": Array [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  Object {
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": ".",
      "packageJsonName": "@org/a",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "yarnLock": undefined,
  },
  Object {
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": ".",
      "packageJsonName": "@org/b",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses yarn workspaces package settings without lerna 1`] = `
Array [
  Object {
    "managerData": Object {
      "yarnWorkspacesPackages": "packages/*",
    },
    "packageFile": "package.json",
  },
  Object {
    "managerData": Object {
      "hasYarnWorkspaces": true,
      "lernaClient": undefined,
      "lernaDir": undefined,
      "packageJsonName": "@org/a",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "yarnLock": "yarn.lock",
  },
  Object {
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": undefined,
      "packageJsonName": "@org/b",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "yarnLock": undefined,
  },
]
`;
